--- a/tests/Makefile.tests
+++ b/tests/Makefile.tests
@@ -4,10 +4,10 @@ CC ?= cc
 TEST_PROGS := ${TEST_SRCS:%.c=%.test}
 XML_FILES  := ${TEST_SRCS:%.c=%.test.xml}
 CFLAGS += -g
-CFLAGS += -fstack-protector -DFORTIFY_SOURCE=2 --param=ssp-buffer-size=4 -Wformat
-       -Werror=format-security -DFORTIFY_SOURCE=2
-CFLAGS += -Wall -Werror -Wfloat-equal -Wpointer-arith -O0 -I ../src/decoder/ \
--I ../src/engine -I ../ -I ../src/listener/ -I ../src/util/ \-I/opt/rb/include
+CFLAGS += -fstack-protector -DFORTIFY_SOURCE=2 --param=ssp-buffer-size=4 -Wformat \
+       -DFORTIFY_SOURCE=2
+CFLAGS += -Wall -Wfloat-equal -Wpointer-arith -O0 -I ../src/decoder/ \
+	-I ../src/engine -I ../ -I ../src/listener/ -I ../src/util/ \-I/opt/rb/include
 LDFLAGS += -lpthread -lrt -lz -lrd -lcmocka
 
 # Profiling
