Add sensors_db_t, that holds stuff like sensor enrichment
Needed to include tommyds libraries for hashtable.

Also, now the sensor definition have changed. Before, all the key was
the enrichment:

"rb_http2k_config": {
     "uuids": {
       "abc": {
         "a": 1,
         "b": "c",
         "d": true,
         "e": null
       },
       ...
     }
}

Now, every client needs to be aware of their enrichment:

"rb_http2k_config": {
     "sensors_uuids": {
       "abc": {
         "enrichment": {
           "a": 1,
           "b": "c",
           "d": true,
           "e": null
         }
       },
      ...
    }
}

This way, we could save, in a future, more data per sensor.

--- a/configs_example/n2kafka_config_rbhttp.json
+++ b/configs_example/n2kafka_config_rbhttp.json
@@ -12,16 +12,13 @@
   "rdkafka.socket.keepalive.enable": "true",
   "blacklist": ["192.168.101.3"],
   "rb_http2k_config": {
-    "uuids": {
+    "sensors_uuids": {
       "abc": {
 	"enrichment": {
           "a": 1,
           "b": "c",
           "d": true,
           "e": null
-        },
-        "limits": {
-          "bytes":100
         }
       },
       "def": {
