[CLEANING] All sub-directory now has a Makefile.

--- a/tests/Makefile.tests
+++ b/tests/Makefile.tests
@@ -1,4 +1,4 @@
-include ../Makefile.config
+include ../mklove/Makefile.base
 
 CC ?= cc
 TEST_PROGS := ${TEST_SRCS:%.c=%.test}
@@ -6,8 +6,11 @@ XML_FILES  := ${TEST_SRCS:%.c=%.test.xml}
 COV_FILES  := ${TEST_SRCS:%.c=%.gcda} ${TEST_SRCS:%.c=%.gcno}
 CFLAGS += -g
 CFLAGS += -fstack-protector -DFORTIFY_SOURCE=2 --param=ssp-buffer-size=4 -Wformat
-CFLAGS += -Wall -Wfloat-equal -Wpointer-arith -O0 -I ../src/decoder/ \
-	-I ../src/engine -I ../ -I ../src/listener/ -I ../src/util/ \-I/opt/rb/include
+CFLAGS += -Wall -Wfloat-equal -Wpointer-arith -O0 \
+	-I$(TOPDIR) -I$(TOPDIR)/src
+
+CPPFLAGS := $(filter-out -I. -I./src,$(CPPFLAGS))
+
 LIBS += -lcmocka
 
 COVERAGE_CPPFLAGS = --coverage
@@ -16,6 +19,7 @@ COVERAGE_INFO = coverage.info
 COVERAGE_OUTPUT_DIRECTORY = out
 
 .PHONY = coverage
+.PRECIOUS = $(TEST_PROGS)
 
 # Profiling
 #CFLAGS += -O0 -pg
