[FIX] Changed configs_example/n2kafka_config_rbhttp.json to include limits field

--- a/configs_example/n2kafka_config_rbhttp.json
+++ b/configs_example/n2kafka_config_rbhttp.json
@@ -14,16 +14,23 @@
   "rb_http2k_config": {
     "uuids": {
       "abc": {
-        "a": 1,
-        "b": "c",
-        "d": true,
-        "e": null
+	"enrichment": {
+          "a": 1,
+          "b": "c",
+          "d": true,
+          "e": null
+        },
+        "limits": {
+          "bytes":100
+        }
       },
       "def": {
-        "f": 1,
-        "g": "w",
-        "h": false,
-        "i": null
+	"enrichment": {
+          "f": 1,
+          "g": "w",
+          "h": false,
+          "i": null
+        }
       }
     },
     "topics": {
