rb_http2k_decoder report organization stats to rb_monitor kafka topic
You can set timer and topics to send organization accounting with:

"rb_http2k_config": {
  ..
    "organizations_sync": {
      "topics": ["rb_monitor","rb_event"],
      "interval_s": 10,
      "clean_on": {
        "timestamp_s_mod":300,
        "timestamp_s_offset":299
      }
    }
  },
  ...
}

This way, http2k decoder will send to rb_monitor organization's stats
every 10 seconds, and will clean the received bytes every 5 minutes, the
last second (1).

Also, you need to specify n2kafka_id in config file:

{
  ...
  "n2kafka_id": "n2kafka_test",
  ...
}

This way, many n2kafka could sync themselves

Notes:
* Consumed bytes of 0 value will not be sent
* Kafka message key will be
  <n2kafka_id><organization_uuid><timestamp%interva;_s>, sepparated with
  a null character (\0)in order to be able to do effective log compaction

======================================================================

(1) Counters will be cleaned when timestamp (in seconds) match:
timestamp_s % timestamp_s_mod + timestamp_s_offset == 0

This way, we can specify an arbitrary moment of a period to clean: Last
second of a day, for example

--- a/configs_example/n2kafka_config_rbhttp.json
+++ b/configs_example/n2kafka_config_rbhttp.json
@@ -8,6 +8,7 @@
     "decode_as": "rb_http2k"
   }],
   "brokers": "eugeniodev",
+  "n2kafka_id": "n2kafka_test",
   "rdkafka.socket.max.fails": "3",
   "rdkafka.socket.keepalive.enable": "true",
   "blacklist": ["192.168.101.3"],
@@ -19,7 +20,8 @@
           "b": "c",
           "d": true,
           "e": null
-        }
+        },
+        "organization_uuid":"abc_org"
       },
       "def": {
 	"enrichment": {
@@ -27,7 +29,34 @@
           "g": "w",
           "h": false,
           "i": null
+        },
+        "organization_uuid":"def_org"
+      }
+    },
+    "organizations_uuids": {
+      "abc_org": {
+        "enrichment": {
+          "a_org":10
+        },
+        "limits": {
+          "bytes": 10240
         }
+      },
+      "def_org": {
+        "enrichment": {
+          "b_org":20
+        },
+        "limits": {
+          "bytes": 20480
+        }
+      }
+    },
+    "organizations_sync": {
+      "topics": ["rb_monitor","rb_event"],
+      "interval_s": 5,
+      "clean_on": {
+        "timestamp_s_mod":300,
+        "timestamp_s_offset":299
       }
     },
     "topics": {
