Send PUT when a client reached limit
Also, HTTP PUT and stdout warning will be sent when receive a byte via
listener or sync topic

In order to send PUT to an url, config file must be:

{
  ...
  "rb_http2k_config": {
    ..
    "organizations_sync": {
      "put_url": "http://localhost:80/",
      ...
    }
  }
}

This configuration will send en ampty PUT to
http://localhost:80/<organization_uuid>/reach_bytes_limit

--- a/configs_example/n2kafka_config_rbhttp.json
+++ b/configs_example/n2kafka_config_rbhttp.json
@@ -52,6 +52,7 @@
       }
     },
     "organizations_sync": {
+      "put_url": "http://localhost:80/",
       "topics": ["rb_monitor","rb_event"],
       "interval_s": 5,
       "clean_on": {
