:green_heart: Add docker with kafka and zookeeper for tests

--- a/configs_example/n2kafka_config_rbhttp.json
+++ b/configs_example/n2kafka_config_rbhttp.json
@@ -7,7 +7,7 @@
     "redborder_uri": true,
     "decode_as": "rb_http2k"
   }],
-  "brokers": "eugeniodev",
+  "brokers": "kafka",
   "n2kafka_id": "n2kafka_test",
   "rdkafka.socket.max.fails": "3",
   "rdkafka.socket.keepalive.enable": "true",
